Intégrer les deux encarts de refonte UI dans la page de résultat d'une aide (#3662)
* Informations d'un établissement dans un composant dédié

* Ajoute la vue dédiée pour les informations de l'établissement

* Mutualiser les établissements dans un composable

* Type les établissements en provenance de l'API du service public

* Supprimme type doublon

* Fix le getEtablissement sans benefit_id pour la page des lieux génériques

* PropType pour définir les props en composition API

* Refacto list et getEtablissementsTypesBySituation

* Refacto typage liste des établissements

* Refacto types => etablissementTypes

* Refacto routes etablissementInformations

* Ajoute deux tests e2e : teste les lieux à proximité dans la page d'aide et dans la page de résultats

* Supprime le store helpingInstitution et simplifie lieux-generiques

* Refacto loadEtablissement non utilisé hors composable

* Fix bouton retour - label souligné inutilement

* Remets l'ancienne version d'UI etablissement-informations pour les lieux génériques (sans le lien d'accès)

* Ajoute les lieux à proximité directement en résultats d'une aide

* Fix eslint

* Fix l'affichage des informations du lieux depuis la page /aides

* Fix eslint

* Ajout encart "Comment l'obtenir?" WIP

* Sépare les version de benefit-cta-link

* revert benefit-cta

* revert benefit-cta-link

* Refacto benefit-cta-light

* Fix warning benefit-cta-light

* Fix responsive etablissement light

* Améliorer l'UI du benefit-cta-light

* Récupération du param benefitId dans la route non uniformisé (problème historique)

* Fix get api service-public si pas d'etablissements à proximité pour une aide

* Corrige les tests e2e pour les etablissements à proximité en refonte

* Refacto benefit cta link en composition API

* Supprime condition d'updating inutile

* Fix updating

* Refacto bouton de retour (page d'information établissement) & cache lieux à proximité (page /aides/

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -1,6 +1,7 @@
 :root {
   /* CSS redirections (DSFR override) */
   --text-disabled-grey: #666;
+  --background-info-container: #f9f8f6;
   --blue-france-sun-113-625: var(--main-color);
   --blue-france-sun-113-625-hover: var(--main-color-hover);
   --blue-france-sun-113-625-active: var(--main-color-active);
@@ -249,6 +250,10 @@ textarea {
   min-width: 120px;
 }
 
+.aj-benefit-cta-light-container {
+  background-color: var(--background-info-container);
+}
+
 .aj-institution-icon {
   width: 70px;
   min-width: 70px;
@@ -269,6 +274,12 @@ textarea {
 .aj-fr-sidemenu__inner {
   height: 100%;
 }
+
+.aj-responsive-icon-places,
+[class*=" fr-icon-"]:before {
+  --icon-size: 2rem;
+}
+
 @media (max-width: 767px) {
   body[data-action-buttons="true"] {
     padding-bottom: 72px;
@@ -297,6 +308,10 @@ textarea {
   .aj-column-container {
     min-height: 100vh;
     align-content: baseline;
+  }
+  .aj-responsive-icon-places,
+  [class*=" fr-icon-"]:before {
+    --icon-size: 1.5rem;
   }
 }
 
@@ -523,4 +538,8 @@ textarea {
 
 .aj-progress-hide-route {
   display: none;
+}
+
+.aj-a {
+  color: var(--main-color);
 }
