--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -143,7 +143,7 @@ textarea {
   color: var(--main-color);
 }
 .fr-btn--icon-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .fr-btn-disabled {
