update: change grid layout

--- a/tools/views/institutions.html
+++ b/tools/views/institutions.html
@@ -6,7 +6,7 @@
       body {
         font-family: arial, sans-serif;
         display: grid;
-        grid-template-columns: repeat(10, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(min(100%, 200px), 1fr));
         gap: 5px;
         font-size: 0.8rem;
       }
