Ajoute un bouton jedonnemonavis (proposition) (#4068)
* feat: ajout bouton jedonnemonavis (proposition)

* feat: style DIY

* feat: Change le tracking des events pour rationaliser la catégorie

Note: + ajout de la route

* feat: Ajout d'un event sur le bouton

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -284,6 +284,18 @@ textarea {
   --icon-size: 2rem;
 }
 
+.aj-jedonnemonavis {
+  text-align: right;
+}
+
+@media (max-width: 576px) {
+  .aj-jedonnemonavis {
+    text-align: left;
+    padding-left: 4px;
+    font-size: 80%;
+  }
+}
+
 @media (max-width: 767px) {
   body[data-action-buttons="true"] {
     padding-bottom: 72px;
