Proof of concept avant de mieux faire le code pour qu'on se rende compte d'un possible résultat

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -563,3 +563,8 @@ textarea {
 .aj-header > a:after {
   display: none;
 }
+
+.aj-montant-input-container {
+  display: flex;
+  align-items: center;
+}
