fix: responsivité de action-buttons Le nouveau bouton pour accéder au récapitulatif et revenir plus tard à la simulation pose des contraintes d'affichage différentes en mode mobile

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -336,6 +336,11 @@ textarea {
   [class*=" fr-icon-"]:before {
     --icon-size: 1.5rem;
   }
+
+  .aj-action-buttons-sm > li,
+  .aj-action-buttons-sm button {
+    flex: 1;
+  }
 }
 
 .aj-iframe-footer {
