--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -295,6 +295,18 @@ textarea {
   text-align: right;
 }
 
+@media (max-width: 480px) {
+  #action-buttons-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: 481px) {
+  #action-buttons-mobile {
+    display: none;
+  }
+}
+
 @media (max-width: 576px) {
   .aj-jedonnemonavis {
     text-align: left;
