--- a/src/styles/themes/light-blue.css
+++ b/src/styles/themes/light-blue.css
@@ -1,14 +1,29 @@
 :root {
+  /* input focus */
   --input-outline: #008080;
+
+  /* buttons */
   --main-color: #008391;
   --main-color-hover: #476b70;
   --main-color-active: #515e60;
+  --main-btn-text-color: #fff;
+  --border-radius: 0.3rem;
+
+  /*
+    progress bar
+    home colored background
+    home main text
+    */
   --secondary-color: #089cb3;
+
+  /* en savoir plus text */
   --info-main-color: #008391;
+
+  /* en savoir plus background */
   --info-secondary-color: #e1ebed;
   --info-secondary-color-hover: #cad8db;
   --info-secondary-color-active: #7eb8bf;
-  --border-radius: 0.3rem;
+
+  /* Font */
   --font-family: inherit;
-  --main-btn-text-color: #fff;
 }
