Authentification moncomptepro sur la page d'accompagnement (#4251)
* refactor: git mv controller/routes github -> moncomptepro + fix imports

* refactor: ajoute les chemins page accompagnement en config

* feat: ajoute l'auth moncomptepro (suppr. auth github) - page accompagnement

* fix: ajoute les id mcp de test dans la config par défaut

* refactor: relève une erreur sur Sentry

* Prends en compte de retour de revue et supprime des mentions à GitHub

* refactor: déplace le logo moncomptepro dans un fichier svg dédié

---------

Co-authored-by: Thomas Guillet <thomas@palya.fr>

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -566,3 +566,7 @@ textarea {
   display: flex;
   align-items: center;
 }
+
+.fr-connect:before {
+  background-image: url(/public/img/logo-moncomptepro.svg);
+}
