--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -287,10 +287,19 @@ textarea {
   --icon-size: 2rem;
 }
 
+.aj-revenirplustard {
+  text-align: right;
+}
+
 @media (max-width: 576px) {
   .aj-hero-section {
     max-height: none;
     height: auto;
+  }
+  .aj-revenirplustard {
+    text-align: left;
+    padding-left: 4px;
+    font-size: 80%;
   }
 }
 
