Ajoute la feature pour revenir plus tard sur une simulation en cours v2 (#4275)
* feat: ajoute le bouton pour revenir plus tard - rebase - v2

* refactor: recapPath

* Ajoute le bouton pour revenir plus tard dans le titre du chapitre & reset action-buttons

* refactor: persist followup

* refactor: utilise baseURL de la config (followup)

* refactor: suppr. log

* refactor: supprime css périmé

* refactor: contenu revenir-plus-tard

* refactor: ajout espace insécable

* fix: cache revenirPlusTard pour la première question

* refactor: contenu revenir-plus-tard

* feat: ajoute les tests e2e pour la page revenir-plus-tard

* fix: ajoute un délai d'attente pour le post simulation temporaire (erreur CI)

* fix: force le focus sur le document (erreur CI)

* fix: change le focus sur le bouton pour copier dans le clipboard (erreur CI)

* fix: modal aria-controls show

* Refacto

* Évite le calcul des aides pour les followups créé sur le parcours

* fix: test e2e [wip]

* fix: test e2e

* fix: suppri. test clipboad (instable sur la CI github)

* fix: type FollowupVirtuals shortRecapPath

* refactor: déplace la création du followup

* fix: style revenirplustard

* refactor: type param Followup (sendFollowupNotifications)

---------

Co-authored-by: Thomas Guillet <thomas@palya.fr>

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -287,10 +287,19 @@ textarea {
   --icon-size: 2rem;
 }
 
+.aj-revenirplustard {
+  text-align: right;
+}
+
 @media (max-width: 576px) {
   .aj-hero-section {
     max-height: none;
     height: auto;
+  }
+  .aj-revenirplustard {
+    text-align: left;
+    padding-left: 4px;
+    font-size: 80%;
   }
 }
 
@@ -326,6 +335,11 @@ textarea {
   .aj-responsive-icon-places,
   [class*=" fr-icon-"]:before {
     --icon-size: 1.5rem;
+  }
+
+  .aj-action-buttons-sm > li,
+  .aj-action-buttons-sm button {
+    flex: 1;
   }
 }
 
