--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -280,6 +280,14 @@ textarea {
   text-align: right;
 }
 
+.aj-hidden {
+  visibility: hidden;
+}
+
+.aj-step-button {
+  width: 40px;
+}
+
 @media (max-width: 576px) {
   .aj-hero-section {
     max-height: none;
