feat: ajoute le type d'email simulation-results-support (wip)

--- a/tools/views/index.html
+++ b/tools/views/index.html
@@ -23,6 +23,9 @@
               <span v-if="typeKey === 'simulation-results'"
                 >Résultats de simulation :
               </span>
+              <span v-if="typeKey === 'simulation-results-support'"
+                >Résultats de simulation (vue du support):
+              </span>
               <span v-else-if="typeKey === 'benefit-action'"
                 >Mail de sondage de la prise d'action suite aux résultats de la
                 simulation (benefit-action) :
