style: thèmes iframe classe .fr-input-rich - ajout commentaires

--- a/src/styles/themes/light-blue.css
+++ b/src/styles/themes/light-blue.css
@@ -28,6 +28,7 @@
   --font-family: inherit;
 }
 
+/* border-radius unavailable on radio input (background-image forced by DSFR causing issue with the border) */
 .fr-radio-rich {
   --border-radius: none;
 }
