--- a/src/styles/themes/bordeaux-metropole.css
+++ b/src/styles/themes/bordeaux-metropole.css
@@ -43,6 +43,7 @@
   --border-active-blue-france: #000000;
 }
 
+/* border-radius unavailable on radio input (background-image forced by DSFR causing issue with the border) */
 .fr-radio-rich {
   --border-radius: none;
 }
