style: force suppr. background-image du DSFR v1.12

--- a/src/styles/aides-jeunes.css
+++ b/src/styles/aides-jeunes.css
@@ -610,6 +610,7 @@ textarea {
 
 .fr-radio-rich input[type="radio"]:checked + label {
   box-shadow: inset 0 0 0 1px var(--border-action-high-blue-france);
+  background-image: none;
 }
 
 .fr-radio-rich input[type="radio"]:checked + label:before {
