feat: mise à jour des tests unitaires

--- a/tools/views/index.html
+++ b/tools/views/index.html
@@ -11,7 +11,10 @@
         <p>
           Pour ajouter un suivi, effectuer une simulation jusqu'au bout, cliquer
           sur le bouton <b>"Recevoir les résultats par email"</b> et enfin sur
-          <b>"j'accepte d'être recontacté ou recontactée par email"</b></p
+          <b
+            >"Je reçois mon récapitulatif et je me fais accompagner par
+            téléphone"</b
+          ></p
         >
       </span>
       <ul v-if="followups && typeKeys">
